kubernetes/base/service-a/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    service: service-a
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    service: service-a
