kubernetes/base/service-a/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-a
spec:
  hosts:
  - "*"
  gateways:
  - service-a-gateway
  http:
  - match:
    - uri:
        prefix: /microservices/service-a
    route:
    - destination:
        host: service-a
        port:
          number: 80
